fix font color on iphone

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,21 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    @apply text-gray-950;
   }
 }
 
+@tailwind components;
+@tailwind utilities;
+
+
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: var(--font-figtree), Arial, Helvetica, sans-serif;
+  font-family: var(--font-figtree), sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
-  }
-}
-
-@layer base {
-  body {
-    @apply text-gray-950;
   }
 }
